--- a/notebooks/eda01_restart.ipynb
+++ b/notebooks/eda01_restart.ipynb
@@ -20,6 +20,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import japanize_matplotlib\n",
     "import seaborn as sns\n",
     "from pathlib import Path\n",
     "import cv2\n",
@@ -512,6 +513,250 @@
     "- テストデータは**side画角のみ**なので、topで過学習しないよう注意\n",
     "- sessionが0のみの訓練データと、複数sessionのテストデータで分布が異なる\n",
     "- unknown選手（-1）の判定が重要"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25",
+   "metadata": {},
+   "source": [
+    "## テスト環境を模倣したデータ拡張\n",
+    "\n",
+    "学習データとテストデータのギャップを埋めるための拡張を可視化：\n",
+    "1. BBox shift: テストデータのBBox不正確を模倣\n",
+    "2. Partial crop: IoU < 0.5（一部のみ写っている）を模倣\n",
+    "3. Lighting shift: 時系列による照明変化を模倣"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image\n",
+    "import random\n",
+    "\n",
+    "# テスト環境を模倣した拡張関数\n",
+    "def bbox_shift_augmentation(image, max_shift=0.15):\n",
+    "    \"\"\"BBoxの位置ずれを模倣（テストデータのBBox不正確を再現）\"\"\"\n",
+    "    h, w = image.shape[:2]\n",
+    "    \n",
+    "    # ランダムにシフト量を決定\n",
+    "    shift_x = int(w * random.uniform(-max_shift, max_shift))\n",
+    "    shift_y = int(h * random.uniform(-max_shift, max_shift))\n",
+    "    \n",
+    "    # シフト後のBBox計算（はみ出さないように調整）\n",
+    "    new_x1 = max(0, shift_x)\n",
+    "    new_y1 = max(0, shift_y)\n",
+    "    new_x2 = min(w, w + shift_x)\n",
+    "    new_y2 = min(h, h + shift_y)\n",
+    "    \n",
+    "    # 元画像からクロップ\n",
+    "    crop_x1 = max(0, -shift_x)\n",
+    "    crop_y1 = max(0, -shift_y)\n",
+    "    crop_x2 = crop_x1 + (new_x2 - new_x1)\n",
+    "    crop_y2 = crop_y1 + (new_y2 - new_y1)\n",
+    "    \n",
+    "    cropped = image[crop_y1:crop_y2, crop_x1:crop_x2]\n",
+    "    \n",
+    "    # リサイズして元のサイズに戻す\n",
+    "    resized = cv2.resize(cropped, (w, h))\n",
+    "    return resized\n",
+    "\n",
+    "def partial_crop_augmentation(image, keep_ratio=0.6):\n",
+    "    \"\"\"部分的な切り取り（IoU < 0.5を模倣）\"\"\"\n",
+    "    h, w = image.shape[:2]\n",
+    "    \n",
+    "    # ランダムに切り取る辺を選択\n",
+    "    side = random.choice(['top', 'bottom', 'left', 'right'])\n",
+    "    \n",
+    "    crop_amount = 1 - keep_ratio\n",
+    "    \n",
+    "    if side == 'top':\n",
+    "        crop_h = int(h * crop_amount)\n",
+    "        cropped = image[crop_h:, :]\n",
+    "    elif side == 'bottom':\n",
+    "        crop_h = int(h * crop_amount)\n",
+    "        cropped = image[:-crop_h, :]\n",
+    "    elif side == 'left':\n",
+    "        crop_w = int(w * crop_amount)\n",
+    "        cropped = image[:, crop_w:]\n",
+    "    else:  # right\n",
+    "        crop_w = int(w * crop_amount)\n",
+    "        cropped = image[:, :-crop_w]\n",
+    "    \n",
+    "    # リサイズして元のサイズに戻す\n",
+    "    resized = cv2.resize(cropped, (w, h))\n",
+    "    return resized\n",
+    "\n",
+    "def lighting_shift_augmentation(image, intensity=0.3):\n",
+    "    \"\"\"照明変化（時系列ギャップを模倣）\"\"\"\n",
+    "    hsv = cv2.cvtColor(image, cv2.COLOR_RGB2HSV).astype(np.float32)\n",
+    "    \n",
+    "    # V（明度）チャンネルをランダムに変更\n",
+    "    brightness_factor = 1 + random.uniform(-intensity, intensity)\n",
+    "    hsv[:, :, 2] = np.clip(hsv[:, :, 2] * brightness_factor, 0, 255)\n",
+    "    \n",
+    "    # 色温度の変化（H チャンネル）\n",
+    "    hue_shift = random.uniform(-10, 10)\n",
+    "    hsv[:, :, 0] = (hsv[:, :, 0] + hue_shift) % 180\n",
+    "    \n",
+    "    rgb = cv2.cvtColor(hsv.astype(np.uint8), cv2.COLOR_HSV2RGB)\n",
+    "    return rgb\n",
+    "\n",
+    "print(\"拡張関数定義完了\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# サンプル画像を選択して拡張を可視化\n",
+    "sample_idx = 100  # 任意のサンプル\n",
+    "\n",
+    "sample_row = df_train.iloc[sample_idx]\n",
+    "img_path = train_crop_dir / f\"{sample_row.name}.jpg\"\n",
+    "bbox_img = cv2.imread(img_path)\n",
+    "\n",
+    "\n",
+    "# 各種拡張を適用\n",
+    "bbox_shift = bbox_shift_augmentation(bbox_img.copy(), max_shift=0.15)\n",
+    "partial_crop = partial_crop_augmentation(bbox_img.copy(), keep_ratio=0.6)\n",
+    "lighting_shift = lighting_shift_augmentation(bbox_img.copy(), intensity=0.3)\n",
+    "\n",
+    "# 複数の拡張を組み合わせ\n",
+    "combined = bbox_shift_augmentation(bbox_img.copy(), max_shift=0.1)\n",
+    "combined = lighting_shift_augmentation(combined, intensity=0.2)\n",
+    "\n",
+    "# 可視化\n",
+    "fig, axes = plt.subplots(2, 3, figsize=(15, 10))\n",
+    "fig.suptitle(f'テスト環境を模倣したデータ拡張の例\\n選手ID: {sample_row[\"label_id\"]}, Quarter: {sample_row[\"quarter\"]}, Angle: {sample_row[\"angle\"]}', \n",
+    "             fontsize=14, fontweight='bold')\n",
+    "\n",
+    "# オリジナル\n",
+    "axes[0, 0].imshow(bbox_img)\n",
+    "axes[0, 0].set_title('オリジナル（学習データ）\\n完璧なBBox', fontsize=12, fontweight='bold')\n",
+    "axes[0, 0].axis('off')\n",
+    "\n",
+    "# BBox shift\n",
+    "axes[0, 1].imshow(bbox_shift)\n",
+    "axes[0, 1].set_title('BBox位置ずれ\\nmax_shift=15%', fontsize=12)\n",
+    "axes[0, 1].axis('off')\n",
+    "\n",
+    "# Partial crop\n",
+    "axes[0, 2].imshow(partial_crop)\n",
+    "axes[0, 2].set_title('部分的切り取り\\nkeep_ratio=60% (IoU<0.5模倣)', fontsize=12)\n",
+    "axes[0, 2].axis('off')\n",
+    "\n",
+    "# Lighting shift\n",
+    "axes[1, 0].imshow(lighting_shift)\n",
+    "axes[1, 0].set_title('照明変化\\nintensity=30%', fontsize=12)\n",
+    "axes[1, 0].axis('off')\n",
+    "\n",
+    "# Combined\n",
+    "axes[1, 1].imshow(combined)\n",
+    "axes[1, 1].set_title('組み合わせ\\n(BBox shift + Lighting)', fontsize=12)\n",
+    "axes[1, 1].axis('off')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(f\"\\n画像情報:\")\n",
+    "print(f\"  オリジナルサイズ: {bbox_img.shape[:2]}\")\n",
+    "print(f\"  選手ID: {sample_row['label_id']}\")\n",
+    "print(f\"  Quarter: {sample_row['quarter']}\")\n",
+    "print(f\"  Angle: {sample_row['angle']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 複数サンプルでの拡張効果を確認\n",
+    "fig, axes = plt.subplots(5, 5, figsize=(15, 15))\n",
+    "fig.suptitle('ランダムサンプルでのデータ拡張効果（各行: 異なる選手）', fontsize=14, fontweight='bold')\n",
+    "\n",
+    "# 5人の異なる選手からランダムサンプル\n",
+    "np.random.seed(42)\n",
+    "sample_players = np.random.choice(df_train['label_id'].unique(), 5, replace=False)\n",
+    "\n",
+    "for i, player_id in enumerate(sample_players):\n",
+    "    player_data = df_train[df_train['label_id'] == player_id]\n",
+    "    sample_row = player_data.sample(1).iloc[0]\n",
+    "    \n",
+    "    # 画像読み込み\n",
+    "    image_path = train_crop_dir / f\"{sample_row.name}.jpg\"\n",
+    "    bbox_img = cv2.imread(image_path)\n",
+    "    bbox_img = cv2.cvtColor(bbox_img, cv2.COLOR_BGR2RGB)\n",
+    "    \n",
+    "    # オリジナル\n",
+    "    axes[i, 0].imshow(bbox_img)\n",
+    "    axes[i, 0].set_title(f'選手{player_id}\\nオリジナル', fontsize=10)\n",
+    "    axes[i, 0].axis('off')\n",
+    "    \n",
+    "    # BBox shift (弱)\n",
+    "    aug1 = bbox_shift_augmentation(bbox_img.copy(), max_shift=0.1)\n",
+    "    axes[i, 1].imshow(aug1)\n",
+    "    axes[i, 1].set_title('BBox shift\\n(10%)', fontsize=10)\n",
+    "    axes[i, 1].axis('off')\n",
+    "    \n",
+    "    # BBox shift (強)\n",
+    "    aug2 = bbox_shift_augmentation(bbox_img.copy(), max_shift=0.2)\n",
+    "    axes[i, 2].imshow(aug2)\n",
+    "    axes[i, 2].set_title('BBox shift\\n(20%)', fontsize=10)\n",
+    "    axes[i, 2].axis('off')\n",
+    "    \n",
+    "    # Partial crop\n",
+    "    aug3 = partial_crop_augmentation(bbox_img.copy(), keep_ratio=0.50)\n",
+    "    axes[i, 3].imshow(aug3)\n",
+    "    axes[i, 3].set_title('Partial crop\\n(65%)', fontsize=10)\n",
+    "    axes[i, 3].axis('off')\n",
+    "    \n",
+    "    # Combined (実戦想定)\n",
+    "    aug4 = bbox_shift_augmentation(bbox_img.copy(), max_shift=0.12)\n",
+    "    aug4 = lighting_shift_augmentation(aug4, intensity=0.25)\n",
+    "    axes[i, 4].imshow(aug4)\n",
+    "    axes[i, 4].set_title('Combined\\n(実戦想定)', fontsize=10)\n",
+    "    axes[i, 4].axis('off')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"\\n拡張パラメータの説明:\")\n",
+    "print(\"  BBox shift: テストデータのBBox位置ずれを模倣\")\n",
+    "print(\"  Partial crop: IoU < 0.5（一部だけ写っている）を模倣\")\n",
+    "print(\"  Lighting shift: 時系列による照明・色温度変化を模倣\")\n",
+    "print(\"  Combined: 実戦で想定される複数の変化を同時適用\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29",
+   "metadata": {},
+   "source": [
+    "### 推奨パラメータと適用確率\n",
+    "\n",
+    "検証データに対してテスト環境を模倣した拡張を適用する場合の推奨設定：\n",
+    "\n",
+    "| 拡張 | パラメータ | 適用確率 | 目的 |\n",
+    "|------|-----------|---------|------|\n",
+    "| BBox shift | max_shift=0.15 | 30% | テストのBBox位置ずれを模倣 |\n",
+    "| Partial crop | keep_ratio=0.6 | 20% | IoU < 0.5（部分的に写る）を模倣 |\n",
+    "| Lighting shift | intensity=0.3 | 30% | 時系列による照明変化を模倣 |\n",
+    "| Combined | shift=0.12 + light=0.25 | 20% | 複数の変化を同時適用 |\n",
+    "\n",
+    "**重要:** 学習データには通常の拡張のみ適用し、検証データにのみテスト模倣拡張を適用する"
    ]
   }
  ],
