--- a/notebooks/exp03_arcface_sgkfold_cloud.ipynb
+++ b/notebooks/exp03_arcface_sgkfold_cloud.ipynb
@@ -13,13 +13,32 @@
    "id": "1",
    "metadata": {},
    "source": [
-    "### 1. 環境確認"
+    "### 2. パッケージインストール"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 必要パッケージのインストール\n",
+    "!pip install -q -r ../requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3",
+   "metadata": {},
+   "source": [
+    "### 1. 環境確認"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,25 +51,6 @@
     "if torch.cuda.is_available():\n",
     "    print(f\"CUDA version: {torch.version.cuda}\")\n",
     "    print(f\"Device name: {torch.cuda.get_device_name(0)}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3",
-   "metadata": {},
-   "source": [
-    "### 2. パッケージインストール"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 必要パッケージのインストール\n",
-    "!pip install -q -r ../requirements.txt"
    ]
   },
   {
@@ -116,6 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import sys\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -182,17 +183,10 @@
     "df_test = pd.read_csv(FILE_TEST_META)\n",
     "\n",
     "# グループ化\n",
-    "df_train['group'] = df_train['quarter'] + '_' + df_train['session'].astype(str)\n",
+    "# df_train['group'] = df_train['quarter'] + '_' + df_train['session'].astype(str)\n",
     "\n",
-    "# インデックス付与（Crop画像読み込み用）\n",
-    "df_train = df_train.reset_index(drop=False) \n",
-    "\n",
-    "print(f\"Train: {df_train.shape}\")\n",
-    "print(f\"Test: {df_test.shape}\")\n",
-    "print(f\"\\n【CV Strategy】\")\n",
-    "print(f\"  Group column: 'group' (quarter_session)\")\n",
-    "print(f\"  Total groups: {df_train['group'].nunique()}\")\n",
-    "print(f\"  Avg samples per group: {len(df_train) / df_train['group'].nunique():.1f}\")"
+    "# インデックス付与（前処理済み画像読み込み用）\n",
+    "df_train = df_train.reset_index(drop=False) "
    ]
   },
   {
@@ -214,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "memo = \"EfficientNet-B0 + ArcFace\"\n",
+    "memo = \"ArcFace with EfficientNet-B0 using Stratified Group K-Fold CV\"\n",
     "run_name = get_run_name(\"arcface_efficientnet_b0_sgkfold\")\n",
     "# run_name = 'arcface_efficientnet_b0_202512190737'\n",
     "print(f\"Run name: {run_name}\")\n",
@@ -232,28 +226,15 @@
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "print(f\"Device: {device}\")\n",
     "\n",
-    "if device == 'cuda':\n",
-    "    # GPU仕様を確認\n",
-    "    gpu_name = torch.cuda.get_device_name(0)\n",
-    "    gpu_memory = torch.cuda.get_device_properties(0).total_memory / 1024**3  # GB\n",
-    "    print(f\"GPU: {gpu_name}, Memory: {gpu_memory:.1f}GB\")\n",
-    "    \n",
-    "    # CPU並列化を強化\n",
-    "    import os\n",
-    "    cpu_count = os.cpu_count() or 8\n",
-    "    print(f\"利用可能CPU: {cpu_count} cores\")\n",
-    "    \n",
-    "    # 大容量GPU (20GB以上) の場合\n",
-    "    if gpu_memory > 20:\n",
-    "        batch_size = 128  # ArcFaceは少し控えめ（KNNより学習コスト高）\n",
-    "        num_workers = min(12, cpu_count)\n",
-    "    else:\n",
-    "        batch_size = 64\n",
-    "        num_workers = min(8, cpu_count)\n",
-    "else:\n",
-    "    batch_size = 32\n",
-    "    num_workers = 2\n",
+    "# GPU・CPU仕様を確認\n",
+    "gpu_name = torch.cuda.get_device_name(0)\n",
+    "gpu_memory = torch.cuda.get_device_properties(0).total_memory / 1024**3  # GB\n",
+    "print(f\"GPU: {gpu_name}, Memory: {gpu_memory:.1f}GB\")\n",
+    "print(f\"利用可能CPU: {os.cpu_count()} cores\")\n",
     "\n",
+    "# 大容量GPU (20GB以上) の場合\n",
+    "batch_size = 128  # ArcFaceは少し控えめ（KNNより学習コスト高）\n",
+    "num_workers = 12\n",
     "epochs = 10 \n",
     "\n",
     "print(f\"最適化パラメータ: batch_size={batch_size}, num_workers={num_workers}, epochs={epochs}\")"
@@ -272,24 +253,20 @@
     "    'model_name': 'efficientnet_b0',  # バックボーン: 'efficientnet_b0', 'resnet50', etc.\n",
     "    'embedding_dim': 512,              # 埋め込みベクトル次元数\n",
     "    'img_size': 224,                   # 入力画像サイズ\n",
-    "    \n",
+    "    'seed': 42,                       # ランダムシード\n",
     "    # ArcFace固有パラメータ\n",
     "    'arcface_s': 30.0,                 # スケールファクター（論文推奨値）\n",
     "    'arcface_m': 0.5,                  # 角度マージン（0.5 rad ≈ 28.6度）\n",
-    "    \n",
     "    # 訓練設定\n",
     "    'batch_size': batch_size,          # GPU環境に応じて調整\n",
     "    'epochs': epochs,                  # エポック数\n",
     "    'lr': 1e-3,                        # 学習率\n",
     "    'weight_decay': 1e-4,              # 重み減衰\n",
-    "    \n",
     "    # EMA設定\n",
     "    'use_ema': True,                   # EMA（Exponential Moving Average）を使用\n",
     "    'ema_decay': 0.998,                # EMA減衰率\n",
-    "    \n",
     "    # 推論設定\n",
     "    'threshold': 0.5,                  # 未知選手判定の閾値\n",
-    "    \n",
     "    # その他\n",
     "    'num_workers': num_workers,        # DataLoaderのワーカー数\n",
     "}\n",
@@ -304,7 +281,7 @@
     ")\n",
     "cv_setting = {\n",
     "    'validator': validator_normal,\n",
-    "    'group_col': 'quarter'\n",
+    "    'group_col': 'quarter',  # グループ化列\n",
     "}"
    ]
   },
@@ -331,7 +308,8 @@
     "    df_train=df_train,\n",
     "    df_test=df_test,\n",
     "    cv_setting=cv_setting,\n",
-    "    logger=logger\n",
+    "    logger=logger,\n",
+    "    seed=params.get('seed')\n",
     ")\n",
     "\n",
     "print(f\"\\nRunner created: {run_name}\")\n",
@@ -343,7 +321,7 @@
    "id": "22",
    "metadata": {},
    "source": [
-    "## 8. 3-Fold CV学習（ArcFace訓練）\n",
+    "## 8. CV学習\n",
     "\n",
     "各Foldで以下を実行：\n",
     "1. ArcFace損失で埋め込み学習（約20エポック）\n",
@@ -377,7 +355,7 @@
    "id": "25",
    "metadata": {},
    "source": [
-    "## 9. 3-Fold評価"
+    "## 9. CV評価"
    ]
   },
   {
@@ -565,54 +543,9 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "39",
-   "metadata": {},
-   "source": [
-    "## 13. 実験サマリー"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "40",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"=\"*60)\n",
-    "print(\"実験サマリー\")\n",
-    "print(\"=\"*60)\n",
-    "print(f\"Run name: {run_name}\")\n",
-    "print(f\"Model: {params['model_name']} + ArcFace\")\n",
-    "print(f\"Embedding dim: {params['embedding_dim']}\")\n",
-    "print(f\"ArcFace (s={params['arcface_s']}, m={params['arcface_m']})\")\n",
-    "print(f\"EMA: {params['use_ema']} (decay={params['ema_decay']})\")\n",
-    "print(f\"Epochs: {params['epochs']}, Batch size: {params['batch_size']}\")\n",
-    "print(f\"Threshold: {params['threshold']}\")\n",
-    "print(f\"Unknown predictions: {(pred_test['label_id'] == -1).sum()} / {len(pred_test)}\")\n",
-    "print(\"=\"*60)\n",
-    "\n",
-    "print(\"\\n【改善案】\")\n",
-    "print(\"1. 閾値チューニング: threshold を 0.3 ~ 0.7 で実験\")\n",
-    "print(\"2. バックボーン変更: resnet50, efficientnet_b1 等を試す\")\n",
-    "print(\"3. データ拡張強化: MixUp, CutMix 等の追加\")\n",
-    "print(\"4. マルチビュー活用: top/side画像の統合\")\n",
-    "print(\"5. 後処理: 時系列スムージング、選手交代タイミング検出\")\n",
-    "print(\"6. アンサンブル: KNNモデルとの組み合わせ\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": []
