--- a/notebooks/exp_final_optimized.ipynb
+++ b/notebooks/exp_final_optimized.ipynb
@@ -15,18 +15,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import sys\n",
-    "sys.path.append('/workspace/atma_22_ca/')\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "from datetime import datetime\n",
+    "import torch\n",
     "\n",
+    "# プロジェクトルートをパスに追加\n",
+    "sys.path.append('/workspace/atma_22_ca/')\n",
+    "\n",
+    "from configs.config import *\n",
     "from src.runner import Runner\n",
     "from src.model_arcface import ModelArcFace\n",
     "from src.util import Logger, Validation, Q1Q2Validator, Metric\n",
     "\n",
-    "print(\"セットアップ完了\")"
+    "print(f\"Input dir: {DIR_INPUT}\")\n",
+    "print(f\"Model dir: {DIR_MODEL}\")\n",
+    "print(f\"Submission dir: {DIR_SUBMISSIONS}\")"
    ]
   },
   {
@@ -44,17 +52,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# データ読み込み\n",
-    "df_train = pd.read_csv('data/raw/input/atmaCup22_2nd_meta/train_meta.csv')\n",
-    "df_test = pd.read_csv('data/raw/input/atmaCup22_2nd_meta/test_meta.csv')\n",
+    "df_train = pd.read_csv(FILE_TRAIN_META)\n",
+    "df_test = pd.read_csv(FILE_TEST_META)\n",
     "\n",
-    "# グループ列作成\n",
-    "df_train['group'] = df_train['quarter']\n",
+    "# グループ化\n",
+    "# df_train['group'] = df_train['quarter'] + '_' + df_train['session'].astype(str)\n",
     "\n",
-    "print(f\"訓練データ: {len(df_train):,}サンプル, {df_train['label_id'].nunique()}選手\")\n",
-    "print(f\"テストデータ: {len(df_test):,}サンプル\")\n",
-    "print(f\"\\n選手分布:\")\n",
-    "print(df_train['label_id'].value_counts().sort_index())"
+    "# インデックス付与（前処理済み画像読み込み用）\n",
+    "df_train = df_train.reset_index(drop=False) "
    ]
   },
   {
@@ -444,8 +449,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
