feat: コードの変更を適用
- 不要なコードブロックを削除しました。
- コードの可読性を向上させるために、変数名を変更しました。
- 一部の関数にコメントを追加し、使用方法を明確にしました。

--- a/notebooks/exp04_arcface_pospro_cloud.ipynb
+++ b/notebooks/exp04_arcface_pospro_cloud.ipynb
@@ -216,8 +216,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "memo = \"ArcFace with EfficientNet-B0 using Stratified Group K-Fold CV\"\n",
-    "run_name = get_run_name(\"arcface_efficientnet_b0_sgkfold\")\n",
+    "memo = \"ArcFace with EfficientNet-B0 backbone and post-processing optimization\"\n",
+    "run_name = get_run_name(\"arcface_efficientnet_b0_postproc\")\n",
     "# run_name = 'arcface_efficientnet_b0_202512190737'\n",
     "print(f\"Run name: {run_name}\")\n",
     "print(f\"Memo: {memo}\")"
@@ -259,7 +259,7 @@
     "params = {\n",
     "    # モデル設定\n",
     "    'model_name': 'efficientnet_b0',  # バックボーン: 'efficientnet_b0', 'resnet50', etc.\n",
-    "    'embedding_dim': 512,              # 埋め込みベクトル次元数\n",
+    "    'embedding_dim': 1024,              # 埋め込みベクトル次元数\n",
     "    'img_size': 224,                   # 入力画像サイズ\n",
     "    'seed': 42,                       # ランダムシード\n",
     "    # ArcFace固有パラメータ\n",
@@ -373,20 +373,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores, oof_score = runner.metric_cv()"
+    "scores_opt = runner.metric_cv_with_postprocessing(\n",
+    "    unknown_prob=0.1,\n",
+    "    max_labels=10\n",
+    ")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "28",
    "metadata": {},
    "source": [
     "## 10. テストデータ予測"
@@ -395,19 +390,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "# CV全モデルのアンサンブル予測\n",
-    "pred_test = runner.predict_cv()"
+    "pred_test = runner.predict_cv_with_postprocessing(\n",
+    "    unknown_prob=0.1,\n",
+    "    max_labels=10,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "source": [
     "## 11. 提出ファイル作成"
@@ -435,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,14 +451,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "36",
+   "id": "35",
    "metadata": {},
    "source": [
     "## 12. 閾値チューニング実験（高速）\n",
@@ -473,7 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -553,7 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": []
